# StruktX

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: README.md  ci-cd.yml  pr-checks.yml  python-publish.yml
docs/: .gitignore  next.config.js  package.json  tailwind.config.js
docs/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  sitemap.ts
docs/app/.well-known/oauth-protected-resource/: route.ts
docs/app/api/mcp/: route.ts
docs/app/api/og/: route.tsx
docs/app/docs/: MDDOCS.md  layout.tsx  loading.tsx  page.tsx
docs/components/: AnimatedLocation.tsx  AnimatedTimeResponse.tsx  BackgroundManager.tsx  GlassSurface.css  GlassSurface.tsx  Irid.tsx  LightRays.css  LightRays.tsx  LoadingSkeleton.tsx  MagicBento.css  MagicBento.tsx  Plasma.css  Plasma.tsx  ScrollReveal.css  ScrollReveal.tsx  SplitText.tsx  TextPressure.tsx  ThemeLoadingProvider.tsx  TimeServicePreview.tsx  WebGLPreloader.tsx  footer.tsx  navigation.tsx
docs/components/animated/: Background.tsx  GridParallax.tsx  Parallax.tsx  Sparkles.tsx  Spotlight.tsx
docs/components/sections/: CodeShowcase.tsx
docs/components/ui/: button.tsx  code-block.tsx  glass-card.tsx  theme-toggle.tsx
docs/lib/: theme.tsx  utils.ts
docs/public/: robots.txt  site.webmanifest
strukt/: __init__.py  ai.py  cli.py  config.py  defaults.py  engine.py  evaluation.py  interfaces.py  langchain_helpers.py  llm_clients.py  logging.py  middleware.py  optimizations.py  requirements.txt  retry.py  secrets.py  tracing.py  types.py  utils.py
strukt/classifiers/: llm_classifier.py
strukt/examples/: full_example.py  middleware.py  simple_classifier.py  time_handler.py
strukt/extensions/devices/: README.md  __init__.py  handler.py  models.py  prompts.py  toolkit.py  transport.py  validation.py
strukt/mcp/: __init__.py  adapters.py  asgi.py  auth.py  fast_agent_client.py  permissions.py  runtime_fast_agent.py  server.py
strukt/mcp_v2/: README.md  __init__.py  asgi.py  auth.py  auth_adapter.py  fastmcp_server.py  handler_adapters.py  middleware_bridge.py  transports.py
strukt/memory/: README_intent_cache.md  __init__.py  handler_cache_mixin.py  intent_cache_engine.py  intent_cache_types.py  memory.py  memory_config.py  memory_store.py  memory_types.py  middleware.py
strukt/memory/examples/: intent_cache_example.py
strukt/middleware/: __init__.py  approval.py  background_tasks.py  logger.py  middleware.py  response_cleaner.py
strukt/prompts/: __init__.py  classifier_prompts.py  memory_prompts.py  time_prompts.py  utils.py
tests/: __init__.py  extras.py  main.py  test_basic.py  test_cached_roomi_handlers.py  test_intent_cache.py  test_roomi_caching_integration.py  test_roomi_caching_simple.py
